# model-governance-framework

./: CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/: __init__.py
src/fairness/: bias_detector.py  evaluator.py
src/model_cards/: __init__.py  generator.py
tests/: conftest.py  test_basic.py  test_model_cards.py
